--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Portfolio: Matthew W.</title>
+    <title>Portfolio: Matthew Wilson</title>
 </head>
 <header>
     <h1>Matthew D. Wilson</h1>
