--- a/index.html
+++ b/index.html
@@ -12,9 +12,20 @@
     <a href="">Contact Me</a>
 </header>
 <body>
-    
+    <section id="matrix">
+        <img src="../Employee-Portfolio/assets/images/Grimmjow.jpg" id="grimmjow">
+        <div class="box">
+        <h3>I can't wait for Matrix Resurrections!</h3>
+        </div>
+    </section>
+    <section>
+        <h2>About Me</h2>
+    </section>
+    <section>
+        <h2>Works</h2>
+    </section>
+    <section>
+        <h2>Contact Me</h2>
+    </section>
 </body>
-<footer>
-    <h1>Contact Me</h1>
-</footer>
 </html>
