Had help from tutor to properly format page.

--- a/index.html
+++ b/index.html
@@ -1,31 +1,72 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<head>
-    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Portfolio: Matthew Wilson</title>
-</head>
-<header>
-    <h1>Matthew D. Wilson</h1>
-    <a href="">About Me</a>
-    <a href="">Works</a>
-    <a href="">Contact Me</a>
-</header>
+
+    <head>
+        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./assets/css/style.css">
+        <title>Portfolio: Matthew Wilson</title>
+    </head>
+
 <body>
-    <section id="matrix">
-        <img src="../Employee-Portfolio/assets/images/Grimmjow.jpg" id="grimmjow">
-        <div class="box">
-        <h3>I can't wait for Matrix Resurrections!</h3>
+    <header>
+        <h1>Matthew D. Wilson</h1>
+        <nav>
+        <!-- Unordered list element -->
+        <ul>
+        <!-- List item element-->
+        <li>
+        <!-- Anchor element -->
+        <a href="#about-me">About Me</a>
+        </li>
+        <li>
+        <a href="#works">Works</a>
+        </li>
+        <li>
+        <a href="#contact-me">Contact Me</a>
+        </li>
+        <li>
+        <a href="#resume">Resume</a>
+        </li>
+        </ul>
+        </nav>
+    </header>
+    <header id="second">
+        <div>
+            <img src="../Employee-Portfolio/assets/images/Grimmjow.jpg" alt="Grimmjow">
+            <h1 class="box">I can't wait for any more news about Matrix Resurrections!</h1>
         </div>
-    </section>
+    </header>
+    <br>
+
     <section>
-        <h2>About Me</h2>
+        <h2 class="section-title">About Me</h2>
+        <article class="section-content">
+            My name is Matthew Wilson. I am currently going to UTSA...
+        </article>
     </section>
+    <br>
+
     <section>
-        <h2>Works</h2>
+        <h2 class="section-title">Works</h2>
+
     </section>
+    <br>
     <section>
-        <h2>Contact Me</h2>
+        <h2 class="section-title">Contact Me</h2>
+    <nav>
+        <ul>
+        <li>
+        <a href="#about-me">Github</a>
+        </li>
+        <li>
+        <a href="#contact-me">Mattrick127</a>
+        </li>
+        <li>
+        <a href="#resume">210-303-2952</a>
+        </li>
+        </ul>
+        </nav>
     </section>
 </body>
+
 </html>
