Proper links, preparing for box image links to projects

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="#contact-me">Contact Me</a>
         </li>
         <li>
-        <a href="#resume">Resume</a>
+        <a href="https://www.linkedin.com/in/matthew-wilson-5b8421179/">LinkedIn</a>
         </li>
         </ul>
         </nav>
@@ -38,31 +38,31 @@
     </header>
     <br>
 
-    <section>
+    <section id="about-me">
         <h2 class="section-title">About Me</h2>
         <article class="section-content">
-            My name is Matthew Wilson. I am currently going to UTSA...
+            My name is Matthew Wilson. I am currently attending Coding Boot Camp at UTSA. I am a part-time student and a full-time worker at Planet K.  My goal is to become familiar with the field and find a job that'll help me in my pursuit for more knowledge.
         </article>
     </section>
     <br>
 
-    <section>
+    <section id="works">
         <h2 class="section-title">Works</h2>
 
     </section>
     <br>
-    <section>
+    <section id="contact-me">
         <h2 class="section-title">Contact Me</h2>
-    <nav>
+    <nav class="contact-content">
         <ul>
         <li>
-        <a href="#about-me">Github</a>
+        <a href="https://github.com/Mattrick127">Github</a>
         </li>
         <li>
-        <a href="#contact-me">Mattrick127</a>
+        <a>mattrick2214@gmail.com</a>
         </li>
         <li>
-        <a href="#resume">210-303-2952</a>
+        <a>210-303-2952</a>
         </li>
         </ul>
         </nav>
