Put images of other works, will make by grid and link clickable.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,19 @@
 
     <section id="works">
         <h2 class="section-title">Works</h2>
-
+        
+      <div class="projects">
+        <section class="card">
+          <header>Camera</header>
+          <img src="./assets/images/HoriSEOn.png" alt="camera" />
+          <p>Price: $300</p>
+        </section>
+        <section class="card">
+          <header>Tablet</header>
+          <img src="./assets/images/Run Buddy.png" alt="tablet" />
+          <p>Price: $150</p>
+        </section>
+      </div>
     </section>
     <br>
     <section id="contact-me">
