--- a/index.html
+++ b/index.html
@@ -48,20 +48,22 @@
 
     <section id="works">
         <h2 class="section-title">Works</h2>
-        
-      <div class="projects">
-        <section class="card">
-          <header>Camera</header>
-          <img src="./assets/images/HoriSEOn.png" alt="camera" />
-          <p>Price: $300</p>
-        </section>
-        <section class="card">
-          <header>Tablet</header>
-          <img src="./assets/images/Run Buddy.png" alt="tablet" />
-          <p>Price: $150</p>
-        </section>
-      </div>
+        <div class="projects">
+          <section class="horiSEOn">
+            <a href="https://mattrick127.github.io/Horiseon-Code-Refactor/">
+            <img src="./assets/images/HoriSEOn.png" alt="HoriSEOn" />
+            <p>HoriSEOn Code Refactor</p>
+            </a>
+          </section>
+          <section class="run-buddy">
+            <a href="https://mattrick127.github.io/run-buddy/">
+            <img src="./assets/images/Run Buddy.png" alt="run-buddy" />
+            <p>Run Buddy Application</p>
+            </a>
+          </section>
+        </div>
     </section>
+
     <br>
     <section id="contact-me">
         <h2 class="section-title">Contact Me</h2>
