Attempted to adjust viewport for other devices.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <h1>Matthew D. Wilson</h1>
+        <h1 class="box-1">Matthew D. Wilson</h1>
         <nav>
         <!-- Unordered list element -->
         <ul>
@@ -33,7 +33,7 @@
     <header id="second">
         <div>
             <img src="../Employee-Portfolio/assets/images/Grimmjow.jpg" alt="Grimmjow">
-            <h1 class="box">I can't wait for any more news about Matrix Resurrections!</h1>
+            <h1 class="box-2">I can't wait for any more news about Matrix Resurrections!</h1>
         </div>
     </header>
     <br>
