added project 1 to portfolio, fixed heights, and removed annoying hover.

--- a/index.html
+++ b/index.html
@@ -47,14 +47,20 @@
         <div class="projects">
         <section class="horiSEOn">
             <a href="https://mattrick127.github.io/Horiseon-Code-Refactor/">
-                <img src="./assets/images/HoriSEOn.png" alt="HoriSEOn" />
+                <img src="assets/images/HoriSEOn.png" alt="HoriSEOn" />
                 <p>HoriSEOn Code Refactor</p>
             </a>
         </section>
         <section class="run-buddy">
             <a href="https://mattrick127.github.io/run-buddy/">
-                <img src="./assets/images/Run Buddy.png" alt="run-buddy" />
+                <img src="assets/images/Run Buddy.png" alt="run-buddy"/>
                 <p>Run Buddy Application</p>
+            </a>
+        </section>
+        <section class="team-project">
+            <a href="https://carlitosdavid.github.io/Astro/">
+                <img src="assets/images/Astro-Scope.png" alt="astro-scope"/>
+                <p>Team Project 1: Astro-Scope</p>
             </a>
         </section>
         </div>
