Added project 2 to portfolio

--- a/index.html
+++ b/index.html
@@ -57,10 +57,16 @@
                 <p>Run Buddy Application</p>
             </a>
         </section>
-        <section class="team-project">
+        <section class="team-project-1">
             <a href="https://carlitosdavid.github.io/Astro/">
                 <img src="assets/images/Astro-Scope.png" alt="astro-scope"/>
                 <p>Team Project 1: Astro-Scope</p>
+            </a>
+        </section>
+        <section class="team-project-2">
+            <a href="https://mysterious-harbor-28313.herokuapp.com/">
+                <img src="assets/images/Instruments R Us.png" alt="instruments-r-us">
+                <p>Team Project 2: Instruments R Us</p>
             </a>
         </section>
         </div>
